tech: change some subsubsections
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/technologie.tex
+++ b/includes/technologie.tex
@@ -314,7 +314,7 @@ celý projekt bol písaný v~programovacom jazyku C++ tak~sa aj~tieto zmeny budu
 	naväzujeme publishera na~špecifický tip správy akú posielame. Nemôže sa teda stať, že~takýto program by sme skompilovali a~následne, keď
 	ho spustíme, tak~by spadol z~dôvodu, že~čítame iný typ správy ako posielame.
 
-\subsubsection{Inicializácia nody (uzla)}
+\subsubsection{Inicializácia uzla}
 
 	Tak~isto ako v~prvej verzii aj~v~druhej verzii musíme definovať uzol (node). Rozdiel je v~tom, že~prvá verzia obsahovala NodeHandle (Ovládač uzla)
 	a~druhá verzia obsahuje priamo Node (Uzol). V~druhej verzii je zaužívaným štandardom túto nodu predediť a~použiť polymorfizmus pri~objekte,
@@ -365,7 +365,7 @@ celý projekt bol písaný v~programovacom jazyku C++ tak~sa aj~tieto zmeny budu
 	aj~tejto oblasti kódu. V~druhej verzii ROS-u si vieme zadefinovať typ vykonávania programu separátne pre~každý uzol a~vieme si tento typ
 	zadefinovať aj~sami~\cite{ROS2design}.
 
-\subsection{Ros control}
+\subsection{Ros\_control}
 \label{subsec:roscontrol}
 
 Roc\_control je balík naprogramovaný v~prostredí ROS1 aj~ROS2. Tým, že~sme si vybrali ROS2 ako prostredie pre~naše riešenie,
