--- a/includes/thanks.tex
+++ b/includes/thanks.tex
@@ -1,2 +1,2 @@
 % !TEX root = ../main.tex
-I would like to express a gratitude to my thesis supervisor.
+Chcel by som sa poďakovať môjmu školiteľovi.
