--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -110,6 +110,12 @@
   urldate = {2022-12-26}
 }
 
+@online{ros_windows_ubuntu,
+  title = {{Robot Operating System (ROS) on Windows through Windows Subsystem for Linux (WSL)}},
+  url = {https://medium.com/@reflectrobotics/robot-operating-system-onwindows-just-got-better-35ca7a55230e},
+  urldate = {2023-05-14}
+}
+
 @manual{EPOSdoc,
   author = {{Maxon}},
   title = {EPOS Command Library},
