--- a/includes/formerState.tex
+++ b/includes/formerState.tex
@@ -159,3 +159,12 @@ a~je taktiež otvorený len pre~jedného užívateľa.
 	štandarde. Z~tohto dôvodu sme nemohli použiť už~existujúci kód na~analýzu tohto typu textu (parser), ktorý
 	by nám zjednodušil prehľadávanie týchto správ.
 
+\subsubsection{Zapínanie robota}
+\label{subsec:zapinanieRobota}
+
+	Pri~každom zapnutí robota prechádza systém robota do~BIOS-u (\acrlong{BIOS}). V~tomto stave sa nedá s~robotom spraviť
+	nič. Musíme preto~napojiť monitor a~klávesnicu na~robot, prejsť cez~BIOS a~naštartovať operačný systém. Keď tento
+	postup nespravíme, tak~operačný systém na~robote nebude vedieť komunikovať s~Arduino doskou, ktorá ovláda robot.
+	Tento problém sme skúmali podrobnejšie a~zistili sme, že~tento problém je spôsobený samotným operačným systémom.
+	Je to~teda chyba, ktorú my nevieme opraviť.
+
